fix(projects): stretch the Home Banner overlay to fill the area

--- a/brasilcomvc/projects/static/styl/res-common/project-list.styl
+++ b/brasilcomvc/projects/static/styl/res-common/project-list.styl
@@ -1,22 +1,33 @@
 body.projects.project-list
 
 	#home-banner figure
+		color: color_text_lightest
+		font-size: 1.25em
 		overflow: hidden
 		position: relative
+		z-index: 0
+
+		// Overlay
+		&:before
+			absolute: 0 0 0 0
+			background: rgba(black, 0.5)
+			content: ''
+			z-index: 1
 
 		img
 		video
-			absolute: 50% false false 50%
 			min-height: 100%
 			min-width: 100%
+			z-index: 0
+
+		figcaption
+		img
+		video
+			absolute: 50% false false 50%
 			transform: translate(-50%, -50%)
 
 		figcaption
-			absolute: 50% false false 50%
-			background: rgba(black, 0.5)
-			color: color_text_lightest
-			font-size: 1.25em
-			transform: translate(-50%, -50%)
+			z-index: 2
 
 			h1
 				font-size: 1.5em
